--- a/ui/package.json
+++ b/ui/package.json
@@ -9,12 +9,17 @@
     "preview": "rsbuild preview"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "@tanstack/react-router": "^1.45.8",
-    "grommet": "^2.39.0",
-    "grommet-icons": "^4.12.1",
+    "autoprefixer": "^10.4.19",
+    "daisyui": "^4.12.10",
+    "dayjs": "^1.11.12",
+    "postcss": "^8.4.40",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "styled-components": "^6.1.12"
+    "react-tailwindcss-datepicker": "^1.6.6",
+    "sonner": "^1.5.0",
+    "tailwindcss": "^3.4.7"
   },
   "devDependencies": {
     "@rsbuild/core": "1.0.1-beta.4",
