--- a/ui/package.json
+++ b/ui/package.json
@@ -1,31 +1,33 @@
 {
   "name": "ui",
   "private": true,
-  "version": "0.0.1",
-  "packageManager": "yarn@4.3.1",
+  "version": "0.0.2",
   "scripts": {
-    "dev": "rsbuild dev",
+    "start": "rsbuild dev",
     "build": "rsbuild build",
-    "preview": "rsbuild preview"
+    "preview": "rsbuild preview",
+    "pretty:fix": "prettier --write ."
   },
   "dependencies": {
-    "@tailwindcss/typography": "^0.5.13",
+    "@datepicker-react/styled": "^2.8.4",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-form": "^0.1.0",
+    "@radix-ui/themes": "^3.1.3",
+    "@tanstack/react-query": "^5.52.0",
     "@tanstack/react-router": "^1.45.8",
-    "autoprefixer": "^10.4.19",
-    "daisyui": "^4.12.10",
-    "dayjs": "^1.11.12",
-    "postcss": "^8.4.40",
+    "ky": "^1.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-tailwindcss-datepicker": "^1.6.6",
     "sonner": "^1.5.0",
-    "tailwindcss": "^3.4.7"
+    "styled-components": "^6.1.12",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@rsbuild/core": "1.0.1-beta.4",
-    "@rsbuild/plugin-react": "1.0.1-beta.4",
+    "@rsbuild/core": "1.0.1-beta.15",
+    "@rsbuild/plugin-react": "1.0.1-beta.15",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "prettier": "^3.3.3",
     "typescript": "^5.5.2"
   }
 }
