--- a/backend/api/appsettings.Development.json
+++ b/backend/api/appsettings.Development.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "staffAccessCode": "pass"
+  "staffAccessCode": "pass",
+  "encryptionKey": "€n(ryPted"
 }
