--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.52.0",
     "@tanstack/react-router": "^1.45.8",
     "ky": "^1.7.0",
+    "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sonner": "^1.5.0",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@rsbuild/core": "1.0.1-beta.15",
     "@rsbuild/plugin-react": "1.0.1-beta.15",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "prettier": "^3.3.3",
